# LLaVA-Med

./: .gitignore  LICENSE  README.md  Research License.docx  download_data.sh  pyproject.toml
data/: llava_med_image_urls.jsonl
data/alignment/: llava_med_alignment_500k.json
data/csv/: instruct_10K_instruction_verb_noun.csv  instruct_10K_instruction_verb_noun_0.html  instruct_10K_instruction_verb_noun_50.html  instruct_10K_response_verb_noun_0.html  instruct_10K_response_verb_noun_50.html  instruct_60K_instruction_verb_noun.csv  instruct_60K_instruction_verb_noun_0.html  instruct_60K_instruction_verb_noun_50.html  instruct_60K_intext_instruction_verb_noun.csv  instruct_60K_intext_instruction_verb_noun_0.html  instruct_60K_intext_instruction_verb_noun_50.html  instruct_60K_intext_response_verb_noun_0.html  instruct_60K_intext_response_verb_noun_50.html  instruct_60K_response_verb_noun_0.html  instruct_60K_response_verb_noun_50.html  pretrain_instruction_verb_noun.csv  pretrain_instruction_verb_noun_0.html  pretrain_instruction_verb_noun_50.html  pretrain_response_verb_noun_0.html  pretrain_response_verb_noun_50.html
data/eval/: llava_med_eval_qa50_fig_captions.json  llava_med_eval_qa50_qa.jsonl  llava_med_qa50_instruct_caption_in_text_cleaned-60k-3epoch.json
data/instruct/: llava_med_instruct_10k.json  llava_med_instruct_60k.json  llava_med_instruct_60k_inline_mention.json  llava_med_instruct_fig_captions.json
docs/: llava_med_performance.md
llava/: conversation.py  mm_utils.py  openai_api.py
llava.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
llava/data/: download_images.py  remove_instructions.py
llava/eval/: eval_multimodal_chat_gpt_score.py  llm.py  model_vqa.py  model_vqa_med.py  qa_baseline_gpt4_translate.py  run_eval.py  run_eval_batch.py  run_eval_batch_pvqa.py  run_eval_pvqa.py  run_med_datasets_eval_batch.py  sqa_eval_batch.py  summarize_gpt_review.py  util.py
llava/model/: __init__.py  (+4 more)
(+41 files in other folders)
